third_party/move/move-compiler-v2/tests/checking/visibility-checker/module_call_visibility_friend_invalid.exp

Diagnostics:
error: function `0x2::X::f_private` is private to module `0x2::X`
   ┌─ tests/checking/visibility-checker/module_call_visibility_friend_invalid.move:4:9
   │
 4 │     fun f_private() {}
   │         ^^^^^^^^^ called from function `0x2::M::f_friend_call_private_1`
   ·
22 │     public(friend) fun f_friend_call_private_1() { X::f_private() }
   │                                                    -------------- called here

error: friend function `0x2::X::f_friend` cannot be called from `0x2::M` (not a friend of `0x2::X`)
   ┌─ tests/checking/visibility-checker/module_call_visibility_friend_invalid.move:5:24
   │
 5 │     public(friend) fun f_friend() {}
   │                        ^^^^^^^^ called from function `0x2::M::f_friend_call_friend`
   ·
18 │     public(friend) fun f_friend_call_friend() { X::f_friend() }
   │                                                 ------------- called here

error: function `0x2::Y::f_private` is private to module `0x2::Y`
   ┌─ tests/checking/visibility-checker/module_call_visibility_friend_invalid.move:10:9
   │
10 │     fun f_private() {}
   │         ^^^^^^^^^ called from function `0x2::M::f_friend_call_private_2`
   ·
23 │     public(friend) fun f_friend_call_private_2() { Y::f_private() }
   │                                                    -------------- called here
